--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package -Dserver.port=8080 --file pom.xml
+    - name: List files in the repository
+      run: |
+        ls ${{ github.workspace }}        
+    - run: echo "🍏 This job's status is ${{ job.status }}."
+      
