--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,20 @@ jobs:
     - name: List files in the repository
       run: |
         mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
-        ls ${{ github.workspace }}/target/dependency       
+        ls ${{ github.workspace }}/target/dependency
+    
+    #############################
+    - name: docker login
+      env:
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      run: |
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag glookie/githubbuild:$(date +%s)
+      
+    - name: Docker Push
+      run: docker push glookie/githubbuild
+
     - run: echo "🍏 This job's status is ${{ job.status }}."
       
