--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,17 +30,17 @@ jobs:
         ls ${{ github.workspace }}/target/dependency
     
     #############################
-    - name: docker login
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag glookie/githubbuild:latest
+    #- name: docker login
+    #  env:
+    #    DOCKER_USER: ${{secrets.DOCKER_USER}}
+    #    DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+    #  run: |
+    #    docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+    #- name: Build the Docker image
+    #  run: docker build . --file Dockerfile --tag glookie/githubbuild:latest
       
-    - name: Docker Push
-      run: docker push glookie/githubbuild:latest
+    #- name: Docker Push
+    #  run: docker push glookie/githubbuild:latest
 
     - run: echo "🍏 This job's status is ${{ job.status }}."
       
