--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,14 +17,7 @@ jobs:
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-    #  run: |
-    #    docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-    #- name: Build the Docker image
-    #  run: docker build . --file Dockerfile --tag glookie/privrepo:latest
-      
-    #- name: Docker Push
-    #  run: docker push glookie/privrepo:latest
-    
+      run: ls 
   prepare:
     needs: build
     runs-on: ubuntu-latest
