--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         name: my-artifacts
         path: target/dependency/
+        retention-days: 1
 
       #  ls ${{ github.workspace }}/target/dependency
       
@@ -46,17 +47,17 @@ jobs:
         run: ls -R
   
     #############################
-    #- name: docker login
-    #  env:
-    #    DOCKER_USER: ${{secrets.DOCKER_USER}}
-    #    DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-    #  run: |
-    #    docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-    #- name: Build the Docker image
-    #  run: docker build . --file Dockerfile --tag glookie/privrepo:latest
-    #  
-    #- name: Docker Push
-    #  run: docker push glookie/privrepo:latest
+      - name: docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag glookie/privrepo:latest
+
+      - name: Docker Push
+        run: docker push glookie/privrepo:latest
 
     #- run: echo "🍏 This job's status is ${{ job.status }}."
       
