docker repo name must be in lowercase

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ jdk:
 
 after_script:
   - mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
-  - ls -R target/dependency
-  - docker build . --file Dockerfile --tag glookie/CICD:latest
-  - docker push glookie/CICD:latest
+  - docker build . --file Dockerfile --tag glookie/travis_cicd:latest
+  - docker push glookie/travis_cicd:latest
