--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ after_script:
   - docker build . --file Dockerfile --tag $DOCKER_REPO:latest
   - docker tag $DOCKER_REPO:latest registry.heroku.com/$HEROKU_APPNAME/web
   - docker push $DOCKER_REPO:latest
+  - docker push registry.heroku.com/$HEROKU_APPNAME/web
+  - heroku container: release web --app $ HEROKU_APPNAME
