--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,4 @@ after_script:
   - docker tag $DOCKER_REPO:latest registry.heroku.com/$HEROKU_APPNAME/web
   - docker push $DOCKER_REPO:latest
   - docker push registry.heroku.com/$HEROKU_APPNAME/web
-
-deploy: 
-  provider: script 
-  script: 
-    - "heroku container: release web --app $HEROKU_APP_NAME"
+  - heroku container:release web -a $HEROKU_APPNAME
