--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ after_script:
   - docker push $DOCKER_REPO:latest
   - docker push registry.heroku.com/$HEROKU_APPNAME/web
   - heroku container:release web -a $HEROKU_APPNAME
+  - echo $TRAVIS_COMMIT_MESSAGE
+  - eroku config:set MYCUSTOM=$TRAVIS_COMMIT_MESSAGE -a $HEROKU_APPNAME
+
