--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ after_script:
   - echo $TRAVIS_COMMIT_MESSAGE
   - heroku config:set MYCUSTOM="$TRAVIS_COMMIT_MESSAGE" -a $HEROKU_APPNAME
 
+notifications:
+  slack: $SLACK_CHANNEL
