--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ after_script:
   - heroku config:set MYCUSTOM="$TRAVIS_COMMIT_MESSAGE" -a $HEROKU_APPNAME
 
 notifications:
-  slack: $SLACK_CHANNEL
+  slack: slackworkspac-yk66992:NBnVz2FXWBYmBwYVZqC3uFNO
